@@ -20,6 +20,14 @@
     
     * The write method in the IO::Handle return if succedd.
     
+    * The following methods in the IO::Socket class are changed.
+    
+      -  method getsockopt : int ($level : int, $optname : int);
+      +  method sockopt : int ($level : int, $optname : int);
+      
+      -  method setsockopt : int ($level : int, $optname : int, $optval : int);
+      +  method set_sockopt : int ($level : int, $optname : int, $optval : int);
+      
 0.207 2023-09-04
   [Prerequirement Changes]
     * Require SPVM::Sys 0.486.
